tests/rosetta/out/Smalltalk/bioinformatics-sequence-mutation.out
/tmp/bioinformatics-sequence-mutation.st:8: parse error, expected ']'
